# ChangeLog for dev-perl/App-CLI
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/App-CLI/ChangeLog,v 1.3 2008/11/18 14:21:07 tove Exp $

  18 Nov 2008; Torsten Veller <tove@gentoo.org> App-CLI-0.07.ebuild:
  New virtuals: Locale-Maketext-Simple Pod-Simple

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove kang from metadata.xml (#51508)

*App-CLI-0.07 (21 Jun 2007)

  21 Jun 2007; Guillaume Destuynder <kang@gentoo.org> +App-CLI-0.07.ebuild:
  Initial import. Dependency of dev-util/svk. Submitted by Mark Davies, bug
  #162743.
