@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST App-CLI-0.07.tar.gz 26901 RMD160 aa41febecfb5473d07a9fa9ab7d8884923582f01 SHA1 01dcf5d43f1926894d114742f2cada468dc18488 SHA256 9f61671617b39f2c00d04dd393843697cbf5b4002b9968e3984c9eaab1310800
+DIST App-CLI-0.08.tar.gz 24160 RMD160 8e13f40f50446524955b38c9a2d3e29ccdd96b03 SHA1 28e0870a570ae9180b1ca891da79669903aa2ed2 SHA256 3032c4528803769a624e5d5af6b64ae84fc13414e81e9c6a6d18393640728c49
 EBUILD App-CLI-0.07.ebuild 618 RMD160 34f1b5598fde159587677291a956acb91b68ea2b SHA1 deebc530501241ad0aad1d61aa22ec9a10134581 SHA256 94f9e87f8e2954640b1285ec73c419df98c5a11463f7457ded0eda23d875ce32
-MISC ChangeLog 620 RMD160 18d7b06f882dd5de6553412a2a89a56ba4518273 SHA1 d7f4f2b94b4e8070eb2dffcaf531a6b230043823 SHA256 5c2a8fe9708d0cfd6e3e98d638c43d5a6578b9c0c6e7924f66b54d95a6e04bd0
+EBUILD App-CLI-0.08.ebuild 573 RMD160 a67b9b9563b6b0b7f81a41fd7b7a658dbfa03d0b SHA1 0f33bdda550a11794057033e133a51601b5a5b8b SHA256 c6f461155aa70cff22fe4a2d147e65a53b358b63655cd86ded20e9eb235d4f9d
+MISC ChangeLog 735 RMD160 7c0aa37f0635da9822478eba4b30b12090453bb4 SHA1 3498eca7f92c98e5512f4f75a6a90dee399bc333 SHA256 829dc0fbc3beb7ed2740102abda78d137e3ade24686451bc67af0db85e501d04
 MISC metadata.xml 159 RMD160 312f9ce05a5e6d5b2ae2dd53bf0371d80bb33a7f SHA1 ed741bf99f00660c2cfca56bcd1241336ad47fd7 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkiz0QACgkQV3J2n04Eaux/CwCgw5rC+uFL1NjJozz0pHik6LET
-9RQAn2+TCLElV8giATaqgm4/UJMH71wY
-=Shbk
+iEYEARECAAYFAkmmf8QACgkQV3J2n04EauzvmACdHPxDtzdV2Ig287Gzr0uz9AMc
+ibwAn09qIAD6HU34X43wTF1dgzZBhbAF
+=sSoH
 -----END PGP SIGNATURE-----
