@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/App-CLI
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/App-CLI/ChangeLog,v 1.3 2008/11/18 14:21:07 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/App-CLI/ChangeLog,v 1.4 2009/02/26 11:41:32 tove Exp $
+
+*App-CLI-0.08 (26 Feb 2009)
+
+  26 Feb 2009; Torsten Veller <tove@gentoo.org> +App-CLI-0.08.ebuild:
+  Version bump
 
   18 Nov 2008; Torsten Veller <tove@gentoo.org> App-CLI-0.07.ebuild:
   New virtuals: Locale-Maketext-Simple Pod-Simple
